get and create tour

--- a/travelatlasmorocco/src/main/resources/application.properties
+++ b/travelatlasmorocco/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 server.error.include-message= always
 server.error.include-binding-errors = always
 
+server.servlet.context-path=/api
+
 spring.datasource.url = jdbc:mysql://aws.connect.psdb.cloud/db_travelatlasmorocco?sslMode=VERIFY_IDENTITY
 spring.datasource.username=sghkv7nad0qi22xzmra6
 spring.datasource.password=pscale_pw_bMrcqongrNYIF5wXZUb1PLagEvaAVrq3FcvFHf6yEQw
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
-server.servlet.context-path=/api
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port =8181
-spring.jpa.show-sql=true
 #create-drop   update
-#update
-spring.jpa.hibernate.ddl-auto = create-drop 
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
